fixed header bug and rearranged icons

--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -9,34 +9,37 @@ Copyright © 2017 Andy Sin. All rights reserved.
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <ui:composition>
+        <div align="center" >
+            <table width="80%" border="0" align="center" cellpadding="5" cellspacing="0">
+                <tr>
+                    <td align="left" valign="middle">
+                        <a class="social-roll" href="https://www.facebook.com/">
+                            <img src="./resources/images/socialMediaIcons/facebook.png" /></a>
+                        <a class="social-roll" href="https://twitter.com/">
+                            <img src="./resources/images/socialMediaIcons/twitter.png" /></a>
+                        <a class="social-roll" href="https://www.linkedin.com/">
+                            <img src="./resources/images/socialMediaIcons/linkedIn.png" /></a>
+                        <a class="social-roll" href="https://plus.google.com/">
+                            <img src="./resources/images/socialMediaIcons/googlePlus.png" /></a>
+                    </td>
 
-        <table width="80%" border="0" align="center" cellpadding="5" cellspacing="0">
-            <tr>
-                <td align="left" valign="middle">
-                    <a href="https://openweathermap.org/">
-                        <i class="fa fa-file" aria-hidden="true">&nbsp;</i>OpenWeatherMap API</a>&nbsp;
-                </td>
-
-                <td align="right" valign="middle">
-                    <a class="social-roll" href="https://www.facebook.com/">
-                        <img src="./resources/images/socialMediaIcons/facebook.png" /></a>
-                    <a class="social-roll" href="https://twitter.com/">
-                        <img src="./resources/images/socialMediaIcons/twitter.png" /></a>
-                    <a class="social-roll" href="https://www.linkedin.com/">
-                        <img src="./resources/images/socialMediaIcons/linkedIn.png" /></a>
-                    <a class="social-roll" href="https://plus.google.com/">
-                        <img src="./resources/images/socialMediaIcons/googlePlus.png" /></a>
-                </td>
-
-            </tr>
+                    <td align="right" valign="middle">
+                        <a href="https://openweathermap.org/">
+                            <i class="fa fa-file" aria-hidden="true">&nbsp;</i>OpenWeatherMap API</a>&nbsp;
+                    </td>
+                </tr>
+            </table> 
+            
             <tr>
                 <td colspan="2" align="center" valign="middle" class="arialTen">A weather application made for educational purposes, powered by the OpenWeatherMap API.</td>
             </tr>
             <br /><br />
+
             <a href="https://openweathermap.org/">
                 <img src="./resources/images/OpenWeatherMap.png" />
-            </a>
-        </table>
+            </a>            
+        </div>
+
 
     </ui:composition>
 
