transparent header for cleaner image

--- a/web/template/siteTemplate.xhtml
+++ b/web/template/siteTemplate.xhtml
@@ -40,6 +40,8 @@ Copyright © 2017 Andy Sin. All rights reserved.
                     <ui:include src="headerTemplate.xhtml" />
                 </ui:insert>
             </div>
+            
+            &nbsp;
 
             <div id="editableContent">
                 <ui:insert name="editableContent" >
