--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -156,7 +156,7 @@ Style the div component whose unique id is "header" per reference
 <div id="header"> in siteTemplate.xhtml
 */
 #header {
-    background-color: #B0E0E6;   /* PowderBlue */
+    background-color: transparent;
     width: 100%;
     height: 84px;
     position: absolute;
