--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -13,13 +13,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
     <ui:composition>
 
-        <h:panelGrid columns="2" columnClasses="leftTopCornerAlign, rightTopCornerAlign">
-
-            <h:link outcome="index">
-                <img src="resources/images/Cloud.png"
-                     style="width:100%; height:100%; max-height:60px; max-width:70px; border: none"
-                     alt="Cloud Logo" />
-            </h:link>
+        <h:panelGrid columns="1" columnClasses="rightTopCornerAlign">
 
             <h:panelGroup>
 
