--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -80,14 +80,46 @@ h1 {
     color: #006400; /* Dark Green */
 }
 
-/* Style the text used under the standard HTML tag "h2" for header 2 */
-h2 {
+.field-label{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12pt;
+    font-size: 15pt;
     font-style: normal;
     font-weight: normal;
     text-decoration: none;
-    color: #800000; /* Maroon */
+    color: black /* Maroon */
+}
+
+.password_retrieve:hover{
+    color: #00BFFF;
+}
+
+
+button[type=submit] {
+  display: block;
+  background-color: #4c4c4c;
+  border: 0;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1.5rem;
+  color: #fff;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  transition: .3s;
+  font-weight: 300;
+  line-height: inherit;
+}
+
+button[type=submit]:hover {
+  background-color: #00BFFF;
+}
+
+/* Style the text used under the standard HTML tag "h2" for header 2 */
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25pt;
+    font-style: normal;
+    font-weight: bolder;
+    text-decoration: none;
+    color: black /* Maroon */
 }
 
 /*
