--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -7,9 +7,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <ui:composition>
 
@@ -21,52 +19,14 @@ Copyright © 2017 Andy Sin. All rights reserved.
                     <i class="fa fa-home">&nbsp;</i>Home
                 </h:link>&nbsp;&nbsp;
 
-                <i class="fa fa-search"></i>&nbsp;
-                <p:commandLink value="Get Forecast" styleClass="arialTen" 
-                               oncomplete="PF('WeatherSearchDialog').show()" />
+
+                <h:link outcome="Search" styleClass="arialTen">
+                    <i class="fa fa-search">&nbsp;</i>Search
+                </h:link>
 
             </h:panelGroup>
         </h:panelGrid>
 
-        <p:dialog position="center center" id="WeatherSearchDialog" widgetVar="WeatherSearchDialog" 
-                  modal="true" resizable="false" appendTo="@(body)" header="Get Weather Forecast" width="300px">
-
-            <h:form id="searchDialogForm">
-                <div align="center" bgcolor="#FDF5E6" >
-                    <h:outputLabel for="searchQueryFieldLat" value="Latitude:" />
-                    <h:inputText id="searchQueryFieldLat" style="width:200px"
-                                 value="#{searchedWeatherController.searchLatitude}" 
-                                 required="true" >
-                        <f:validateDoubleRange minimum="-90.0" maximum="90.0"></f:validateDoubleRange>
-                    </h:inputText>
-
-                    <br /><br />
-                    <h:outputLabel for="searchQueryFieldLong" value="Longitude:" />
-                    <h:inputText id="searchQueryFieldLong" style="width:200px"
-                                 label="Longitude"
-                                 value="#{searchedWeatherController.searchLongitude}" 
-                                 required="true" >
-                                 <f:validateDoubleRange minimum="-180.0" maximum="180.0"></f:validateDoubleRange>
-                    </h:inputText>
-
-                    <br /><br /><br />
-
-                    <p:commandButton value="Search" id="searchButton"  ajax="false" 
-                                     styleClass="commandButton" icon="ui-icon-search"
-                                     action="#{searchedWeatherController.getForecast()}"
-                                     />
-                    &nbsp;&nbsp;
-
-                    <!-- CANCEL button -->
-                    <p:commandButton value="Cancel" onclick="PF('WeatherSearchDialog').hide()" 
-                                     styleClass="commandButton" icon="ui-icon-cancel"/>
-                    <br /><br />
-                </div>
-            </h:form>  
-
-        </p:dialog>
-
     </ui:composition>
-
 
 </html>
