--- a/web/template/siteTemplate.xhtml
+++ b/web/template/siteTemplate.xhtml
@@ -10,7 +10,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <h:head>
-
+        <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet"/>        
         <title><ui:insert name="title">Cloud Weather</ui:insert></title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
