--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -1,32 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Created by Andy Sin on 2017.03.03 
-Copyright © 2017 Andy Sin. All rights reserved.
+Created by Abhiroop Singh on 2017.03.05 
+Copyright © 2017 Abhiroop Singh. All rights reserved.
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    
 
+    <!--
+    *********************************************
+    * Header Component of Template siteTemplate *
+    *********************************************
+    This page's content is displayed on the top of each page created based on the siteTemplate.
+    Changes made in this file will show up automatically with all pages created based on the
+    siteTemplate for the entire site, achieving great maintainability.
+    -->
+
+    <!-- Do not enter tags before the composition line since they are ignored by JSF -->
     <ui:composition>
+        <h:form>
+            <h:panelGrid columns="2" columnClasses="leftTopCornerAlign, rightTopCornerAlign">
 
-        <h:panelGrid columns="1" columnClasses="rightTopCornerAlign">
-
-            <h:panelGroup>
-
-                <h:link outcome="index" styleClass="arialTen">
-                    <i class="fa fa-home">&nbsp;</i>Home
-                </h:link>&nbsp;&nbsp;
-
-
-                <h:link outcome="Search" styleClass="arialTen">
-                    <i class="fa fa-search">&nbsp;</i>Search
+                <!-- Use absolute path for the image file since it will be accessed from all pages -->
+                <h:link outcome="index"><img src="resources/images/CompanyLogo.png"
+                                             style="width:350px; height:50px; border: none"
+                                             alt="Company Logo" />
                 </h:link>
-
-            </h:panelGroup>
-        </h:panelGrid>
-
+                
+                <h:panelGroup>
+                    <!-- 
+                    With the i tag, you can access an icon given at http://fontawesome.io/icons/ by using
+                    its class name. For this to work, the following must be specified in the siteTemplate file:
+                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" />
+                    -->
+                    <!-- Clicking "Home" displays the index.xhtml file -->
+                    <h:link outcome="index" styleClass="header_tab">Home</h:link> &nbsp;&nbsp;
+                    
+                    <p:button styleClass="login_button" outcome="SignIn" value="LOG IN"/> &nbsp;&nbsp;
+                    <p:button styleClass="signup_button" outcome="SignUp" value="SIGN UP"/>
+                    
+                </h:panelGroup>
+            </h:panelGrid>
+        </h:form>
     </ui:composition>
+    <!-- Do not enter tags before the composition line since they are ignored by JSF -->
 
 </html>
