--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -36,11 +36,11 @@ html, body {
     background-size: cover;         /* Generic */
     /*background-repeat: repeat-x;   /* Do not repeat the image */
     /*background-image: url('http://bgfons.com/upload/sky_texture1967.jpg');
-
+    
     animation: animatedBackground 30s linear infinite;*/
 
     width: 100%;                    /* Set page width horizontally 100% */
-    height: 100%;                   /* Set page height vertically 100% */
+    min-height: 100%;                   /* Set page height vertically 100% */
 }
 
 
@@ -57,8 +57,7 @@ body {
     font-style: normal;
     font-weight: normal;
     text-decoration: none;
-    color: black;
-    
+    color: black;    
 }
 
 /* Style the text used under the standard HTML tag "p" for paragraph */
@@ -108,6 +107,16 @@ index_bottom {
     
 }
 
+index_bottom_header {
+    
+     font-family: Lato;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black; /* Dark Green */
+    
+}
+
 #topMain {
     
     height: 500px;
@@ -121,13 +130,13 @@ index_bottom {
 
 #bottomMain {
     
-    height: 650px;
+    height: 100%;
     width: 100%;
     
     background: #EEEEEE;
     font-family: Lato; 
     text-align: center;
-
+    font-size: 20px;
 }
 
 .field-label{
@@ -185,22 +194,54 @@ Hyperlinks (or links) are styled differently depending on what state they are in
 
 /* Set the font family for the standard HTML tag "a" for hyperlinks */
 a {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Lato;
+    font-size: 18px;
+    color: white;
 }
 
 a:link {
+    color: white;
     text-decoration: none; /* Do not underline the link in normal state */
 }
 
 a:visited {
+    color: white;
     text-decoration: none; /* Do not underline the link in visited state */
 }
 
 a:hover {
+    color: white;
     text-decoration: none; /* Underline the link in hover state */
 }
 
 a:active {
+    color: white;
+    text-decoration: underline; /* Underline the link in active state */
+}
+
+b {
+    font-family: Lato;
+    font-size: 14px;
+    color: #0aa9f7;
+}
+
+b:link {
+    color: #0aa9f7;
+    text-decoration: none; /* Do not underline the link in normal state */
+}
+
+b:visited {
+    color: #0aa9f7;
+    text-decoration: none; /* Do not underline the link in visited state */
+}
+
+b:hover {
+    color: #0aa9f7;
+    text-decoration: none; /* Underline the link in hover state */
+}
+
+b:active {
+    color: #0aa9f7;
     text-decoration: underline; /* Underline the link in active state */
 }
 
@@ -259,20 +300,25 @@ Style the div component whose unique id is "editableContent" per reference
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
-    margin-top: 150px;
+    margin-top: 100px;
     margin-bottom: 0px;
+    position: relative;
 }
 /* 
 Style the div component whose unique id is "footer" per reference 
 <div id="footer"> in siteTemplate.xhtml
 */
 #footer {
-    background-color: #EEEEEE;
+    background-color: #313134;
     height: 100px;
     width: 100%;
     left: 0px;
     right: 0px;
     bottom: 0px;
+    color: white;
+    font-family: Lato;
+    font-size: 18px;
+    position: fixed;
 }
 /* 
 Style the div component whose unique id is "footerPanelGrid" per reference
@@ -323,6 +369,22 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
     border-style: solid;
     box-shadow: none;
     
+}
+
+.login {
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: 300;
+    color: white;
+    text-decoration: none;
+    background: #313134;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: none;
+}
+
+.login:hover {
+        border-color: #0aa9f7;
 }
 
 .signup_button:hover {
@@ -474,7 +536,7 @@ Approach 1:
     Check the documentation of a PrimeFaces UI component to identify
     which styles are used so that you can override them.
 
-    You can also Inspect the UI element under the Chrome web browser
+You can also Inspect the UI element under the Chrome web browser
     to determine which CSS style is used so that you can override it. 
 
 Approach 2: 
