--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -6,12 +6,13 @@ Copyright © 2017 Andy Sin. All rights reserved.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:composition>
         <div align="center" >
-            <table width="80%" border="0" align="center" cellpadding="5" cellspacing="0">
-                <tr>
+            <table width="100%" border="0" align="center" cellpadding="10" cellspacing="0" style="float: center">
+                <tr style="float: center">
                     <td align="left" valign="middle">
                         <a class="social-roll" href="https://www.facebook.com/">
                             <img src="./resources/images/socialMediaIcons/facebook.png" /></a>
@@ -24,14 +25,17 @@ Copyright © 2017 Andy Sin. All rights reserved.
                     </td>
 
                     <td align="right" valign="middle">
-                        <a href="https://openweathermap.org/">
-                            <i class="fa fa-file" aria-hidden="true">&nbsp;</i>OpenWeatherMap API</a>&nbsp;
-                    </td>
+                        <a href="https://darksky.net/" target="_blank">Dark Sky</a> &nbsp;&nbsp;
+                        
+                        <a href="https://weather.com/" target="_blank">The Weather Channel</a> &nbsp;&nbsp;
+
+
+                    </td>                    
                 </tr>
             </table> 
             
             <tr>
-                <td colspan="2" align="center" valign="middle" class="arialTen">A weather application made for educational purposes, powered by the OpenWeatherMap API.</td>
+                <td colspan="2" align="center" valign="middle" class="a">A weather application made for educational purposes, powered by the Dark Sky API.</td>
             </tr>
             <br /><br />      
         </div>
