--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -155,7 +155,7 @@ index_bottom_header {
 
 button[type=submit] {
   display: block;
-  background: transparent;
+  background-color: #4c4c4c;
   border: 0;
   border-radius: 0.25rem;
   padding: 0.5rem 1.5rem;
@@ -168,7 +168,7 @@ button[type=submit] {
 }
 
 button[type=submit]:hover {
-  background: transparent;
+  background-color: #00BFFF;
 }
 
 /* Style the text used under the standard HTML tag "h2" for header 2 */
