--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -40,7 +40,9 @@ html, body {
     animation: animatedBackground 30s linear infinite;*/
 
     width: 100%;                    /* Set page width horizontally 100% */
-    min-height: 100%;                   /* Set page height vertically 100% */
+    height: 100%;                   /* Set page height vertically 100% */
+    margin: 0px;
+    padding: 0px;
 }
 
 
@@ -273,6 +275,9 @@ Style the div component whose unique id is "page" per reference
     font-weight: normal;
     text-decoration: none;
     color: black;
+    position: relative;
+    min-height:100%;
+
 }
 /* 
 Style the div component whose unique id is "header" per reference 
@@ -302,7 +307,8 @@ Style the div component whose unique id is "editableContent" per reference
     margin-right: 0px;
     margin-top: 100px;
     margin-bottom: 0px;
-    position: relative;
+    /*position: relative;*/
+    padding-bottom: 100px;
 }
 /* 
 Style the div component whose unique id is "footer" per reference 
@@ -318,7 +324,7 @@ Style the div component whose unique id is "footer" per reference
     color: white;
     font-family: Lato;
     font-size: 18px;
-    position: fixed;
+    position: absolute;
 }
 /* 
 Style the div component whose unique id is "footerPanelGrid" per reference
@@ -579,3 +585,8 @@ cascading hierarchy, use the !important attribute.
     padding-right: 5px;
 }
 
+.calendarClass input {
+    font-family: Lato;
+    width: 250px;
+    box-shadow: none;
+}
