--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -48,8 +48,8 @@ html, body {
 
 
 @keyframes animatedBackground {
-	from { background-position: 0 0; }
-	to { background-position: 100% 0; }
+    from { background-position: 0 0; }
+    to { background-position: 100% 0; }
 }
 
 /* Style the text used under the standard HTML tag "body" */
@@ -92,7 +92,7 @@ index_header {
 }
 
 index_regular {
-    
+
     font-family: Lato;
     font-size: 20px;
     text-decoration: none;
@@ -100,30 +100,30 @@ index_regular {
 }
 
 index_bottom {
-    
-     font-family: Lato;
+
+    font-family: Lato;
     font-size: 30px;
     font-weight: bold;
     text-decoration: none;
     color: black; /* Dark Green */
-    
+
 }
 
 index_bottom_header {
-    
-     font-family: Lato;
+
+    font-family: Lato;
     font-size: 30px;
     font-weight: bold;
     text-decoration: none;
     color: black; /* Dark Green */
-    
+
 }
 
 #topMain {
-    
+
     height: 500px;
     width: 100%;
-    
+
     background: #f5f5f8;
     font-family: Lato; 
     text-align: center;
@@ -131,10 +131,10 @@ index_bottom_header {
 }
 
 #bottomMain {
-    
+
     height: 100%;
     width: 100%;
-    
+
     background: #EEEEEE;
     font-family: Lato; 
     text-align: center;
@@ -156,29 +156,28 @@ index_bottom_header {
 
 
 button[type=submit] {
-  display: block;
-  background-color: #4c4c4c;
-  border: 0;
-  border-radius: 0.25rem;
-  padding: 0.5rem 1.5rem;
-  color: #fff;
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  transition: .3s;
-  font-weight: 300;
-  line-height: inherit;
+    display: block;
+    background-color: #4c4c4c;
+    border: 0;
+    border-radius: 0.25rem;
+    padding: 0.5rem 1.5rem;
+    color: #fff;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    transition: .3s;
+    font-weight: 300;
+    line-height: inherit;
 }
 
 button[type=submit]:hover {
-  background-color: #00BFFF;
+    background-color: #00BFFF;
 }
 
 /* Style the text used under the standard HTML tag "h2" for header 2 */
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato;
     font-size: 25pt;
     font-style: normal;
-    font-weight: bolder;
     text-decoration: none;
     color: black /* Maroon */
 }
@@ -347,7 +346,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
     font-size: 18px;
     color: white;
     text-decoration: none;
-    
+
 }
 
 .login_button {
@@ -361,7 +360,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
     border-width: 1px;
     border-style: solid;
     box-shadow: none;
-    
+
 }
 
 .signup_button {
@@ -374,7 +373,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
     border-width: 1px;
     border-style: solid;
     box-shadow: none;
-    
+
 }
 
 .login {
@@ -390,7 +389,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
 }
 
 .login:hover {
-        border-color: #0aa9f7;
+    border-color: #0aa9f7;
 }
 
 .signup_button:hover {
@@ -410,7 +409,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
 }
 
 .index_login {
-    
+
     font-family: Lato;
     font-size: 30px;
     font-weight: 300;
@@ -425,7 +424,7 @@ Style the div component whose unique id is "rightAlignPanelGroup" per reference
 }
 
 .index_signup {
-    
+
     font-family: Lato;
     font-size: 30px;
     font-weight: 300;
@@ -556,13 +555,18 @@ cascading hierarchy, use the !important attribute.
 
 /* Approach 1: Override PrimeFaces style definitions to use smaller Arial font */
 .ui-datatable-data, .facetHeader, .ui-panel-titlebar, .ui-paginator, .ui-dialog-content, .ui-confirm-dialog-message, .ui-widget-content {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato;
     font-size: 10pt;
     font-style: normal;
     font-weight: normal;
     text-decoration: none;
 }
-
+.ui-widget,.ui-widget-header,.ui-widget-content,.ui-widget-header .ui-widget-header,.ui-widget-content .ui-widget-content,.ui-widget input,.ui-widget select,.ui-widget textarea,.ui-widget {
+    font-family: Lato; 
+    font-size: 20px; 
+    text-decoration: none;
+    color: black;
+}
 /* Approach 2: Override PrimeFaces p:commandButton style */
 .commandButton {
     border-radius: 2em !important;
@@ -606,4 +610,23 @@ cascading hierarchy, use the !important attribute.
     vertical-align: middle;
     margin-left: 5px;
     width: 20%;
+}
+
+.accountInputTextField {
+    font-family: Lato;
+    font-size: 20px;
+    text-decoration: none;
+    box-shadow: none;
+    width: 220px;
+    height: 25px;
+}
+
+.weatherResults {
+    font-family: Lato;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.custom {
+    height: 100px;
 }
