--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -7,13 +7,14 @@ Copyright © 2017 Andy Sin. All rights reserved.
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
         <div align="center" >
-            <table width="100%" border="0" align="center" cellpadding="10" cellspacing="0" style="float: center">
+            <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="float: center">
                 <tr style="float: center">
-                    <td align="left" valign="middle">
+                    <td align="left" valign="middle" style="padding-top: 10px">
                         <a class="social-roll" href="https://www.facebook.com/">
                             <img src="./resources/images/socialMediaIcons/facebook.png" /></a>
                         <a class="social-roll" href="https://twitter.com/">
