Share via email functionality. Right now share button is in header for logged in users, we can change this once the other page is ready.

--- a/web/template/headerTemplate.xhtml
+++ b/web/template/headerTemplate.xhtml
@@ -101,6 +101,7 @@ Copyright © 2017 Abhiroop Singh. All rights reserved.
 
                         <!-- Clicking "My Files" displays the UserFiles.xhtml file -->
                         <h:link outcome="Planner" styleClass="header_tab">My Planner</h:link>&nbsp;&nbsp;
+                        <h:link outcome="Share" styleClass="header_tab">Share</h:link>&nbsp;&nbsp;
                     </c:if>
 
                     <!-- "Sign In" and "Create an Account" if no user is signed in -->
