--- a/web/resources/css/siteStyles.css
+++ b/web/resources/css/siteStyles.css
@@ -498,6 +498,15 @@ Other Style Definitions
 =======================
 */
 
+/* Style error messages text in SendEmail.xhtml */
+.errorMessages {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    font-style: normal;
+    font-weight: normal;
+    color: #800080; /* Purple */
+}
+
 /* Style email label text */
 .emailLabels {
     font-family: Lato;
