Fianl Touches (missing comments

--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -12,7 +12,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
     <ui:composition>
         <div align="center" >
-            <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" style="float: center">
+            <table width="100%" border="0" align="center" cellpadding="25" cellspacing="0" style="float: center;">
                 <tr style="float: center">
                     <td align="left" valign="middle" style="padding-top: 10px">
                         <a class="social-roll" href="https://www.facebook.com/">
@@ -23,22 +23,29 @@ Copyright © 2017 Andy Sin. All rights reserved.
                             <img src="./resources/images/socialMediaIcons/linkedIn.png" /></a>
                         <a class="social-roll" href="https://plus.google.com/">
                             <img src="./resources/images/socialMediaIcons/googlePlus.png" /></a>
+                    </td>                   
+
+                    <td colspan="2" align="center" valign="middle">
+                        <a href="http://manta.cs.vt.edu/cs3984/" style="color: #0aa9f7">CS3984 Cloud Software Development</a> course semester project app developed by
+                        <a href="https://www.linkedin.com/in/abhiroopsingh/" style="color: #0aa9f7">Abhiroop Singh</a>, 
+                        <a href="https://www.linkedin.com/in/agangu/" style="color: #0aa9f7">Akhil Gangu</a>,<br/>
+                        <a href="https://www.linkedin.com/in/andyksin/" style="color: #0aa9f7">Andy Sin</a>, 
+                        <a href="https://www.linkedin.com/in/tsutantanon/" style="color: #0aa9f7">Tanya Sutan-Tanon</a>,
+                        <a href="https://www.linkedin.com/in/messer-derek/" style="color: #0aa9f7">Derek Messer</a> only for educational purposes.
                     </td>
 
+
                     <td align="right" valign="middle">
-                        <a href="https://darksky.net/" target="_blank">Dark Sky</a> &nbsp;&nbsp;
-                        
-                        <a href="https://weather.com/" target="_blank">The Weather Channel</a> &nbsp;&nbsp;
+                        <a href="https://darksky.net/" target="_blank" style="color: #0aa9f7">Dark Sky</a> &nbsp;&nbsp;
+
+                        <a href="https://weather.com/" target="_blank" style="color: #0aa9f7">The Weather Channel</a> &nbsp;&nbsp;
 
 
-                    </td>                    
+                    </td> 
                 </tr>
             </table> 
-            
-            <tr>
-                <td colspan="2" align="center" valign="middle" class="a">A weather application made for educational purposes, powered by the Dark Sky API.</td>
-            </tr>
-            <br /><br />      
+
+
         </div>
 
 
