--- a/web/template/siteTemplate.xhtml
+++ b/web/template/siteTemplate.xhtml
@@ -11,7 +11,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
     <h:head>
         <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet"/>        
-        <title><ui:insert name="title">Cloud Weather</ui:insert></title>
+        <title><ui:insert name="title">Weather-Proof</ui:insert></title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
