--- a/web/template/footerTemplate.xhtml
+++ b/web/template/footerTemplate.xhtml
@@ -6,13 +6,12 @@ Copyright © 2017 Andy Sin. All rights reserved.
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <ui:composition>
         <div align="center" >
             <table width="100%" border="0" align="center" cellpadding="25" cellspacing="0" style="float: center;">
+                <!-- Social Media Icons -->
                 <tr style="float: center">
                     <td align="left" valign="middle" style="padding-top: 10px">
                         <a class="social-roll" href="https://www.facebook.com/">
@@ -24,6 +23,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                         <a class="social-roll" href="https://plus.google.com/">
                             <img src="./resources/images/socialMediaIcons/googlePlus.png" /></a>
                     </td>                   
+                    <!-- Footer Links and Attributions -->
 
                     <td colspan="2" align="center" valign="middle">
                         <a href="http://manta.cs.vt.edu/cs3984/" style="color: #0aa9f7">CS3984 Cloud Software Development</a> course semester project app developed by
